Fix image overflowing to the right prior to its slide scroll animation by adding overflow-x-hidden to div above sections

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -23,7 +23,7 @@
   }
 
   .picture-hidden {
-    @apply translate-x-full opacity-0 blur-lg;
+    @apply translate-x-1/2 opacity-0 blur-lg;
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 750ms;
